--- a/AppStore.html
+++ b/AppStore.html
@@ -115,15 +115,15 @@
     </div>
 
     <div class="app-card" style="animation-delay: 0.4s">
-      <h2>📝 Notes</h2>
-      <p>Write and save notes in browser storage.</p>
-      <button onclick="location.href='apps/notes.html'">▶ Play</button>
+      <h2>📝 21 Days Habit Chalenge</h2>
+      <p>21 Days Habit Chalenge</p>
+      <button onclick="location.href='https://21-days-habit-chalenge.vercel.app/'">▶ Play</button>
     </div>
 
     <div class="app-card" style="animation-delay: 0.6s">
-      <h2>🎮 Mini Game</h2>
-      <p>A fun little click speed game.</p>
-      <button onclick="location.href='apps/game.html'">▶ Play</button>
+      <h2>🎮 Goal Tracker</h2>
+      <p>A goal tracker app.</p>
+      <button onclick="location.href='https://21-days-habit-chalenge-t6dg.vercel.app/'">▶ Play</button>
     </div>
 
     <div class="app-card" style="animation-delay: 0.8s">
